[tool.poetry]
name = "d3ploy"
version = "4.1.3"
description = "Easily deploy to S3 with multiple environment support."
authors = ["dryan <dryan@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/dryan/d3ploy"
repository = "https://github.com/dryan/d3ploy"
documentation = "https://github.com/dryan/d3ploy#readme"
readme = "README.md"

[tool.poetry.scripts]
d3ploy = "d3ploy.d3ploy:cli"

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
boto3 = "^1.19.2"
pathspec = "^0.9.0"
tqdm = "^4.62.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "*"
flake8 = "*"
coverage = "*"
ipython = "^7.28.0"
twine = "^3.4.2"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|node_modules)/'

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
known_django=["django"]
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip=[".venv"]
known_third_party = ["boto3", "botocore", "pathspec"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
